Tweaked premium page display

--- a/Recipe_Sharing_Website/Components/Pages/Premium.razor
+++ b/Recipe_Sharing_Website/Components/Pages/Premium.razor
@@ -43,7 +43,7 @@ else
             <li>Unlimited recipe ratings</li>
         </ul>
 
-        <button class="btn btn-primary" @onclick="PayForPremium">Upgrade to Premium</button>
+        <button class="btn btn-primary" @onclick="PayForPremium">Upgrade to Premium for $9.99</button>
     </div>
 }
 
